--- a/circle.yml
+++ b/circle.yml
@@ -11,6 +11,10 @@ dependencies:
     - wget https://github.com/jgm/pandoc/releases/download/1.14.1/pandoc-1.14.1-1-amd64.deb
     - sudo dpkg -i pandoc-1.14.1-1-amd64.deb
 
+checkout:
+  post:
+    - build/edit_all.sh
+
 test:
   post:
     - build/test_all.sh
