--- a/circle.yml
+++ b/circle.yml
@@ -3,11 +3,8 @@ machine:
 
 dependencies:
   pre:
-    - wget -q https://www.ubuntulinux.jp/ubuntu-ja-archive-keyring.gpg -O- | sudo apt-key add -
-    - wget -q https://www.ubuntulinux.jp/ubuntu-jp-ppa-keyring.gpg -O- | sudo apt-key add -
-    - sudo wget https://www.ubuntulinux.jp/sources.list.d/precise.list -O /etc/apt/sources.list.d/ubuntu-ja.list
     - sudo aptitude update -y
-    - sudo aptitude install -y texlive-lang-cjk texlive-xetex fonts-ipafont
+    - sudo aptitude install -y texlive-xetex fonts-ipafont jq
     - wget https://github.com/jgm/pandoc/releases/download/1.14.1/pandoc-1.14.1-1-amd64.deb
     - sudo dpkg -i pandoc-1.14.1-1-amd64.deb
 
@@ -24,6 +21,7 @@ deployment:
     branch: master
     commands:
       - build/build_all.sh
+      - build/release_github.sh
   development:
     branch: /^.*chap[0-9]*.*$/
     commands:
