--- a/circle.yml
+++ b/circle.yml
@@ -4,7 +4,7 @@ machine:
 dependencies:
   pre:
     - sudo aptitude update -y
-    - sudo aptitude install -y texlive-xetex fonts-ipafont jq
+    - sudo aptitude install -y texlive-xetex fonts-ipafont bc jq
     - wget https://github.com/jgm/pandoc/releases/download/1.14.1/pandoc-1.14.1-1-amd64.deb
     - sudo dpkg -i pandoc-1.14.1-1-amd64.deb
 
