checkout ステップの漏れを修正

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,6 +62,7 @@ jobs:
     environment:
       CIRCLE_ARTIFACTS: /artifacts
     steps:
+      - checkout
       - attach_workspace:
           at: /artifacts
       - run:
@@ -73,6 +74,7 @@ jobs:
     environment:
       CIRCLE_ARTIFACTS: /artifacts
     steps:
+      - checkout
       - attach_workspace:
           at: /artifacts
       - run:
