--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,8 +47,8 @@ jobs:
           name: prepare for pandoc
           command: build/edit_all.sh
       - run:
-          name: build manual for all chapters
-          command: build/build_all.sh
+          name: build manual for single chapter
+          command: build/build_chapter.sh
       - store_artifacts:
           path: /artifacts
       - persist_to_workspace:
@@ -66,8 +66,8 @@ jobs:
       - attach_workspace:
           at: /artifacts
       - run:
-          name: build manual for all chapters
-          command: build/build_all.sh
+          name: release artifacts to github
+          command: build/release_github.com
   notify_github:
     docker:
       - image: stanja/manual-builder:latest
@@ -78,7 +78,7 @@ jobs:
       - attach_workspace:
           at: /artifacts
       - run:
-          name: build manual for all chapters
+          name: send notification to the current pull request
           command: build/notify_github.sh
 
 workflows:
